--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "tailwindcss-fluid-type": "^2.0.6"
   },
   "dependencies": {
+    "@astrojs/check": "^0.7.0",
     "@fontsource-variable/inter": "^5.0.17",
+    "@iconify-json/line-md": "^1.1.38",
+    "@iconify-json/meteocons": "^1.1.4",
     "micromodal": "^0.4.10",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "tiny-invariant": "^1.3.3",
-    "@astrojs/check": "^0.7.0",
     "typescript": "^5.5.2"
   }
 }
